src/pages/trace/tree.scss
.tree {
  margin: 2em 0;

  > div {
    display: flex;

    &:first-child {
      border-bottom: 1px solid rgb(235, 235, 235);
      > div:first-child {
        border-right: none !important;
      }
    }
    
    > div:first-child {
      margin-right: auto;
      padding-right: 1em;
      border-right: 1px solid rgb(235, 235, 235);
      min-width: 200px;
    }
    
    > div:last-child {
      padding-left: 1em;
      flex-grow: 1;
    }
  }
}

.tree-row {
  > div {
    padding: 0.25em 0;
  }
}

.tree-label {

  > div > div {
    height: 100%;
    width: 100%;
    position: relative;
  }

  > div > div > div {
    position: absolute;
    padding-left: 0.5em;
    border-left: 1px solid rgb(235, 235, 235);
  }
}

.tree-form {
  text-align: right;
}

.tree-service-name {
  cursor: pointer;
  &:hover {
    text-decoration: underline;
  }
}

.tree-chart {
  position: relative;
  width: 100%;
  height: 2em;

  &:hover {
    div {
      text-decoration: underline;
    }
  }

  > div {
    position: absolute;
  }

  > div:first-child {
    background: rgb(235, 235, 235);
    border-radius: 10px;
    height: 0.5em;
  }

  > div:nth-child(2) {
    background: #108ee9;
    border-radius: 10px;
    height: 0.5em;
  }

  > div:nth-child(3) {
    white-space: nowrap;
    bottom: 0px;
    font-size: 0.8em;
  }
}

.tree-details {
  border-top: 1px solid rgb(235, 235, 235);
  padding: 1em 0;
  margin: 0.5em 0;
}

.annotations {
  display: flex;

  > div:first-child {
    margin-right: auto;
    min-width: 250px;
    padding-right: 1em;
  }
  
  > div:last-child {
    padding-left: 1em;
    flex-grow: 1;
  }
}

.binary-annotations {
  width: 100%;
  margin-bottom: 1em;

  > div:first-child {
    border-bottom: 1px solid rgb(235, 235, 235);
    margin: 0 0 0.5em 0;
    padding: 0 0 0.25em 0;
  }

  > div > div {
    display: flex;
    > div {
      flex: 1;
    }
  }
}

